--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -5,7 +5,9 @@
         settings.Name = "GridView_deudas";
         settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
 
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         settings.KeyFieldName = "IdCbteCble_Ogiro";
 
         settings.Width = Unit.Percentage(100);
@@ -79,6 +81,7 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
+        settings.Columns.Add("IdCbteCble_Ogiro", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("co_factura", "Documento").Width = Unit.Percentage(10);
         settings.Columns.Add("info_proveedor.info_persona.pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
         settings.Columns.Add("co_observacion", "Observación").Width = Unit.Percentage(35);
@@ -102,24 +105,6 @@
             });
             column.Width = Unit.Percentage(5);
         });
-
-
-        //settings.Columns.Add(column =>
-        //{
-        //    column.Caption = "#";
-        //    column.Width = Unit.Pixel(100);
-        //    column.SetDataItemTemplateContent(container =>
-        //    {
-        //        Html.DevExpress().HyperLink(hyperlink =>
-        //        {
-        //            var IdTipoCbte_Ogiro = DataBinder.Eval(container.DataItem, "IdTipoCbte_Ogiro");
-        //            var IdCbteCble_Ogiro = DataBinder.Eval(container.DataItem, "IdCbteCble_Ogiro");
-        //            hyperlink.Properties.Text = "Retención";
-        //            hyperlink.NavigateUrl = Url.Action("Nuevo", "Retencion", new { Area = "CuentasPorPagar", IdTipoCbte_Ogiro = IdTipoCbte_Ogiro, IdCbteCble_Ogiro = IdCbteCble_Ogiro });
-        //        }).Render();
-        //    });
-        //});
-
 
     });
 }
