--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/Modificar.cshtml
@@ -21,8 +21,7 @@
     @Html.HiddenFor(q => q.IdOrdenCompraExt)
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdRecepcion)
-   
-
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
     <div class="row">
         <div class="col-md-12">
@@ -78,7 +77,7 @@
         </div>
     </div>
 
-   
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
