--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
@@ -83,6 +83,17 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label for="pr_motivoAnulacion">Motivo anulación</label>
+                            @Html.TextAreaFor(q => q.pr_motivoAnulacion, new { @class = "form-control", @id = "pr_motivoAnulacion", @rows = 2 })
+                            @Html.ValidationMessageFor(q => q.pr_motivoAnulacion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-md-4">
             <div class="row">
