--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Index.cshtml
@@ -13,3 +13,19 @@
     @Html.Action("GridViewPartial_presentacion")
 
 }
+
+
+<script type="text/javascript">
+    $(document).on('submit', 'form', function () {
+        var buttons = $(this).find('[type="submit"]');
+        if ($(this).valid()) {
+            buttons.each(function (btn) {
+                $(buttons[btn]).prop('disabled', true);
+            });
+        } else {
+            buttons.each(function (btn) {
+                $(buttons[btn]).prop('disabled', false);
+            });
+        }
+    });
+</script>
