--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Nuevo.cshtml
@@ -49,3 +49,17 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script type="text/javascript">
+    $(document).on('submit', 'form', function () {
+        var buttons = $(this).find('[type="submit"]');
+        if ($(this).valid()) {
+            buttons.each(function (btn) {
+                $(buttons[btn]).prop('disabled', true);
+            });
+        } else {
+            buttons.each(function (btn) {
+                $(buttons[btn]).prop('disabled', false);
+            });
+        }
+    });
+</script>
