--- a/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     ViewBag.Title = "Documentos pendientes deenviar al SRI";
-    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
-    {
-        Response.Redirect("~/Account/Login");
-    }
+    //if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    //{
+    //    Response.Redirect("~/Account/Login");
+    //}
     Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
@@ -16,6 +16,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                        <button type="button" class="btn btn-primary" id="btn_guardar">Aprobar</button>
                 </div>
             </div>
             <div class="box-tools pull-right">
@@ -75,6 +76,7 @@
         <div class="box-body">
             @Html.Action("GridViewPartial_documentos_pendientes_enviar_sri", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin })
         </div>
+       
         <!-- /.box-body -->
         <div class="box-footer">
             [@Session["IdEmpresa"]] @Session["nom_empresa"]
@@ -84,7 +86,8 @@
 
 
 }
-<script>
+
+<script type="text/javascript">
     $(function () {
         //Date picker
         $('#fecha_ini').datepicker({
@@ -95,4 +98,69 @@
             autoclose: true
         })
     });
+   
+     var selectedIDs;
+    function OnBeginCallback(s, e) {
+        //Pass all selected keys to GridView callback action
+        e.customArgs["selectedIDs"] = selectedIDs;
+    }
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("IdCbteCble_Ogiro", GetSelectedFieldValuesCallback);
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+
+    function guardar() {
+        var datos = {
+            Ids: selectedIDs
+        }
+        $("#btn_guardar").disabled = true;
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("guardar_aprobacion", "Deudas", new { Area = "Generar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#myform").submit();
+                GridViewPartial_aprobacion_facturas.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+        $("#btn_guardar").disabled = false;
+    }
+
+    function seleccionar_aprobacion() {
+        var datos = {
+            Ids: selectedIDs
+        }
+        $("#btn_guardar").disabled = true;
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("seleccionar_aprobacion", "ComprobantesSinAutorizacion", new { Area = "General" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $("#myform").submit();
+                GridViewPartial_aprobacion_facturas.PerformCallback();
+                $("#fac_con_saldo").modal("hide");
+
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+
 </script>
