--- a/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/_GridViewPartial_documentos_pendientes_enviar_sri.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/_GridViewPartial_documentos_pendientes_enviar_sri.cshtml
@@ -3,9 +3,33 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_documentos_pendientes_enviar_sri";
-        settings.CallbackRouteValues = new { Controller = "Pais", Action = "GridViewPartial_documentos_pendientes_enviar_sri"};
+        settings.CallbackRouteValues = new { Controller = "ComprobantesSinAutorizacion", Action = "GridViewPartial_documentos_pendientes_enviar_sri"};
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdPais";
+        settings.KeyFieldName = "secuencia";
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        //Configuración click derecho
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
+        //Configuración filtro por columna
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
         //Configuración checkbox
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowSelectCheckbox = true;
@@ -19,50 +43,24 @@
             column.Width = System.Web.UI.WebControls.Unit.Percentage(2);
             column.Visible = false;
         });
-        //CConfiguracion responsive
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-        //Configuración scrolling y pager
-        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.Settings.VerticalScrollableHeight = 400;
-        settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10;
-        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-        settings.SettingsPager.AlwaysShowPager = true;
-        //Configuración filtro por columna
-        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        settings.Settings.ShowFilterRow = true;
-        settings.Settings.ShowHeaderFilterButton = true;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
-        //Configuracion exportacion
-        settings.SettingsExport.EnableClientSideExportAPI = true;
-        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        settings.Toolbars.Add(t =>
+
+
+        settings.Columns.Add("Tipo_documento", "Tipo").Width = Unit.Percentage(10);
+        settings.Columns.Add("Documento", "Documento").Width = Unit.Percentage(15);
+        settings.Columns.Add(column =>
         {
-            t.EnableAdaptivity = true;
-            t.Items.Add(GridViewToolbarCommand.ExportToPdf);
-            t.Items.Add(GridViewToolbarCommand.ExportToXls);
-            t.Items.Add(GridViewToolbarCommand.ExportToXlsx);
-            t.Items.Add(GridViewToolbarCommand.ExportToDocx);
-            t.Items.Add(GridViewToolbarCommand.ExportToRtf);
-            t.Items.Add(GridViewToolbarCommand.ExportToCsv);
+            column.FieldName = "vt_fecha";
+            column.Caption = "Fecha";
+            column.Width = Unit.Percentage(10);
+            column.PropertiesEdit.DisplayFormatString = "d";
+            column.EditorProperties().DateEdit(sp =>
+            {
+                column.PropertiesEdit.DisplayFormatString = "d";
+                sp.Width = Unit.Percentage(100);
+            });
         });
-        settings.SettingsExport.RenderBrick = (sender, e) =>
-        {
-            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-        };
-
-
-        settings.Columns.Add("Tipo_documento", "Tipo").Width = Unit.Percentage(20);
-        settings.Columns.Add("Documento", "Documento").Width = Unit.Percentage(20);
-        settings.Columns.Add("vt_fecha", "Fecha emisión").Width = Unit.Percentage(35);
         settings.Columns.Add("pe_nombreCompleto", "Beneficiario").Width = Unit.Percentage(35);
-        settings.Columns.Add("vt_Observacion", "Observación").Width = Unit.Percentage(10);
+        settings.Columns.Add("vt_Observacion", "Observación").Width = Unit.Percentage(35);
 
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
         settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
