--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -140,11 +140,16 @@
     }
 
     function ModificarLinea() {
+        var AplicarDscto = false;
+        if ($("#chk_aplicar_todo").is(":checked")) {
+            AplicarDscto = true;
+        }
         var datos = {
             IdTransaccionSession: $("#IdTransaccionSession").val(),
             Secuencia: $("#Secuencia").text(),
             Precio: $("#txtPrecio").val(),
-            PorDescuento: $("#txtPorDescuento").val()
+            PorDescuento: $("#txtPorDescuento").val(),
+            AplicarTodaFactura: AplicarDscto
         }
         $.ajax({
             type: 'POST',
@@ -530,7 +535,10 @@
                         <label for="txtPorDescuento">% Descuento</label>
                         <input type="text" id="txtPorDescuento" class="form-control" />
                     </div>
-                    <div class="col-md-12">
+                    <div class="col-md-6 form-group">
+                        <label for="chk_aplicar_todo"><input type="checkbox" id="chk_aplicar_todo" value="true|false"/> Aplicar descuento a toda la factura</label>                        
+                    </div>
+                    <div class="col-md-6">
                         <button type="button" class="btn btn-primary" onclick="ModificarLinea();">Aceptar</button>
                     </div>
                 </div>
@@ -695,7 +703,7 @@
                             <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();">
                                 <i class="fa fa-lock"></i> Desbloquear
                             </button>
-                            <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:5px;" hidden></label>
+                            <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:5px;" hidden></label>                            
                         </div>
                     </div>
                     <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_cuotas">
